--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,15 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// Security, Authentication
+	//implementation('org.springframework.boot:spring-boot-starter-security')
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	implementation('org.springframework.boot:spring-boot-starter')
+	//compile('org.springframework.boot:spring-boot-starter-web')
 }
 
 tasks.named('test') {
