--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     platform: mysql
-    url: jdbc:mysql://database-3.cg6r2v1i4woh.ap-northeast-2.rds.amazonaws.com:3306/database3
+    url: jdbc:mysql://database1.cypyubct4thy.ap-northeast-2.rds.amazonaws.com:3306/database1
     # url 형식은 jdbc:mysql://RDS의 EndPoint/내부 DB 스키마명 입니다.
     username: msung99 # 만약 따로 설정하지 않으셨다면 기본값은 admin 입니다
     password: msung6924 # 비밀번호를 입력해주세요!
